--- a/package.json
+++ b/package.json
@@ -12,15 +12,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.10",
+    "@types/express-session": "^1.17.3",
+    "@types/glob": "^7.1.3",
+    "@types/passport": "^1.0.6",
+    "@types/passport-local": "^1.0.33",
     "axios": "^0.21.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "faker": "^5.5.1",
     "jest": "^26.6.3",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "reflect-metadata": "^0.1.13",
