--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
+    "ramda": "^0.27.1",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.6.2",
     "sequelize-typescript": "^2.1.0",
@@ -52,6 +53,7 @@
     "@types/jest": "^26.0.22",
     "@types/morgan": "^1.9.2",
     "@types/node": "^14.14.35",
+    "@types/ramda": "^0.27.40",
     "@types/supertest": "^2.0.10",
     "@types/validator": "^13.1.3"
   }
